--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="intro">
-              <h3 class="mhover"> - Samsung Electronics, Mobile Communications Business <br> - Hardware <br> - Tennis <br> - Hard Drinker</h3>
+              <h3 class="mhover"> - Samsung Electronics, Mobile Communications Business <br> - Business Executive <br> - Director of H/W <br>  <br> </h3>
 
               <div class="col-lg-4 bgmj">
                 <div class="feature-item">
@@ -208,7 +208,7 @@
               </div>
             </div>
             <div class="intro">
-              <h3 class="mhover"> - Samsung Electronics, Visual Display Business <br> - Software <br> - Idea Bank <br> </h3>
+              <h3 class="mhover"> - Samsung Electronics, Visual Display Business <br> - Planning Director <br> - Product strategy <br>  <br> </h3>
 
               <div class="col-lg-4 bgsy">
                 <div class="feature-item">
@@ -220,7 +220,7 @@
             </div>
               
             <div class="intro">
-              <h3 class="mhover"> - Samsung Electronics, Health & Medical Equipment Business <br> - Mechanical design, Thermal analysis<br> - Received the business manager award <br> </h3>
+              <h3 class="mhover"> - Samsung Electronics, Health & Medical Equipment Business <br> - Sales Director <br> - Mechanical design, Thermal analysis<br> - Received the business manager award <br> </h3>
 
               <div class="col-lg-4 bgts">
                 <div class="feature-item">
@@ -234,7 +234,7 @@
 
             <div class="row">
               <div class="intro2">
-                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Software <br> - application development, ChangeAgent <br> </h3>
+                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Marketing Director <br> - Service, Application development <br> </h3>
 
               <div class="col-lg-6 bgjh">
                 <div class="feature-item">
@@ -245,7 +245,7 @@
               </div>
               </div>
               <div class="intro2">
-                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Software<br> - AI, Autonomous driving <br> </h3>
+                <h3 class="mhover"> - Samsung Electronics, Samsung Research <br> - Technical director <br> - firmware, AI, Autonomous driving <br> </h3>
 
               <div class="col-lg-6 bgmk">
                 <div class="feature-item">
