--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="board.html">공 고</a>
+            <a class="nav-link js-scroll-trigger" href="board.html">Announcement</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="news.html">보도 자료</a>
+            <a class="nav-link js-scroll-trigger" href="news.html">Related News</a>
           </li>
           <li style = "display:none"  class="nav-item">
             <a class="nav-link js-scroll-trigger" href="map.html">Map</a>
