--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Sunny Side</a>
+            <a class="nav-link js-scroll-trigger" href="#download">Sunny Five</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#cta">History</a>
