--- a/redirect.html
+++ b/redirect.html
@@ -12,7 +12,7 @@
 <!-- 클라이언트 보안 키를 넣는다. -->
 <input type="text" name="client_secret" value="y824hlyozstlj86t6fk6e0h0ylxnuv"> <br />
 <!-- 등록한 리디렉트 주소를 여기에 넣는다. -->
-<input type="text" name="redirect_uri" value="http://sunnyfive.net/redirect.html"> <br />
+<input type="text" name="redirect_uri" value="https://10sunnyside.github.io/website/redirect.html"> <br />
 <!-- 고정값 -->
 <input type="text" name="grant_type" value="authorization_code"> <br />
 <input type="submit">
