--- a/redirect.html
+++ b/redirect.html
@@ -19,6 +19,9 @@
 </form>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
+
+
+var token;
 // 주소 창에 있는 parameter를 취득한다.
 function getParameter(name){
 var list = location.search.substring(1).split('&');
@@ -36,14 +39,14 @@ return null;
 $("input[name=code]").val(decodeURIComponent(getParameter('code')));
 
 
-var token;
-/*
+
+
 $.post("https://id.twitch.tv/oauth2/token", { code : getParameter('code'), client_id: "t0m7bcvtee84igtp7lrd080gbno6uf", 
 client_secret: "o6d5ngohgbz0jtd22mds4x0kfihges", redirect_uri : "https://10sunnyside.github.io/website/redirect.html",
 grant_type : "authorization_code" }, // 서버가 필요한 정보를 같이 보냄. 
-function(data, status) { alert(data); alert(status); //$("#text").html(data + "<br>" + status); // 전송받은 데이터와 전송 성공 여부를 보여줌. 
+function(data, status) { token=data; alert(status); //$("#text").html(data + "<br>" + status); // 전송받은 데이터와 전송 성공 여부를 보여줌. 
 } );
-*/
+
 
 
 </script>
