--- a/redirect.html
+++ b/redirect.html
@@ -47,7 +47,9 @@ grant_type : "authorization_code" }, // 서버가 필요한 정보를 같이 보
 function(data, status) { token=data; alert(status); //$("#text").html(data + "<br>" + status); // 전송받은 데이터와 전송 성공 여부를 보여줌. 
 } );
 
-
+var test_token =JSON.stringify(token);
+var access_token = JSON.parse(test_token);
+alert(access_token.access_token);
 
 </script>
 </body>
