--- a/redirect.html
+++ b/redirect.html
@@ -45,13 +45,20 @@ $.post("https://id.twitch.tv/oauth2/token", { code : getParameter('code'), clien
 client_secret: "o6d5ngohgbz0jtd22mds4x0kfihges", redirect_uri : "https://10sunnyside.github.io/website/redirect.html",
 grant_type : "authorization_code" }, // 서버가 필요한 정보를 같이 보냄. 
 function(data, status) { token=data; alert(status); 
-    alert(token);
 var test_token =JSON.stringify(token);
 var access_token = JSON.parse(test_token);
 alert(access_token.access_token);
+token = access_token.access_token
+token();
 //$("#text").html(data + "<br>" + status); // 전송받은 데이터와 전송 성공 여부를 보여줌. 
 } );
 
+function token(){
+
+    alert(token);
+}
+
+token();
 
 </script>
 </body>
