--- a/map.html
+++ b/map.html
@@ -433,6 +433,14 @@ var markerData = [
             url: "https://www.youtube.com/embed/BQYKarjjWi0",
             title: "Tokyo Shinjuku JR",
             nation:"Japan"
+        },
+        {
+            lat: 35.689683,
+            lng: 139.700748,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/BQYKarjjWi0",
+            title: "Tokyo Shinjuku JR",
+            nation:"Japan"
         }
 
 
