--- a/map.html
+++ b/map.html
@@ -194,7 +194,16 @@ var markerData = [
             url: "https://www.youtube.com/embed/1pf1qjYpHlY",
             title: "Hotel Park Chioggia",
             nation:"Italy"
-        },        {
+        },        
+        {
+            lat: 45.4440906,
+            lng: 12.3251189,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/HpZAez2oYsA",
+            title: "Live View of Ponte delle Guglie Venice - View from Hotel Filù Venezia",
+            nation:"Italy"
+        },
+        {
             lat: 45.440705,
             lng: 12.332468,
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
@@ -250,7 +259,8 @@ var markerData = [
             url: "https://www.youtube.com/embed/1EiC9bvVGnk",
             title: "Jackson Hole Wyoming USA Town Square",
             nation:"USA"
-        },        {
+        },        
+        {
             lat: 37.551279,
             lng: 126.988227,
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
@@ -434,7 +444,78 @@ var markerData = [
             title: "Tokyo Shinjuku JR",
             nation:"Japan"
         },
-
+        {
+            lat: 40.7589626,
+            lng: -73.9893574,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/mRe-514tGMg",
+            title: "Time Square 4K",
+            nation:"USA"
+        },
+        {
+            lat: 36.1020854,
+            lng: -115.1778926,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/1ZNCtDLUKHw",
+            title: "Las Vegas: AE View Live",
+            nation:"USA"
+        },
+        {
+            lat: 40.7590077,
+            lng: -73.9872109,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/VYsHV7WPyFw",
+            title: "Times Square: Duffy Square 4K View Live",
+            nation:"USA"
+        },        
+        {
+            lat: 52.3729239,
+            lng: 4.8910058,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/KGEekP1102g",
+            title: "Amsterdam Dam.",
+            nation:"Netherlands"
+        },    
+        {
+            lat: 43.3881971,
+            lng: 5.9603455,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/1z2coTLH6rQ",
+            title: "Nice South of France Côte d'Azur Nature Beach in 4k",
+            nation:"France"
+        },
+        {
+            lat: 35.7015318,
+            lng: 139.6916908,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/RQA5RcIZlAM",
+            title: "Tokyo Shinjuku Live Cam",
+            nation:"Japan"
+        },
+        {
+            lat: 35.6668733,
+            lng: 139.6750912,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/OF0iDephya8",
+            title: "Tokyo Shibuya Rainy Walks Before the storm 4K Binaural ASMR",
+            nation:"Japan"
+        },
+        {
+            lat: 35.7015318,
+            lng: 139.6916908,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/vHr4qSQ-5XU",
+            title: "【4K】Night walk in Shinjuku, Tokyo",
+            nation:"Japan"
+        },
+        {
+            lat: 35.669626,
+            lng: 139.7611617,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/laPpth6x3P8",
+            title: "【4K】Ginza Yukata festival",
+            nation:"Japan"
+        },
 
     ];
     var checkNation;
