--- a/map.html
+++ b/map.html
@@ -557,7 +557,54 @@ var markerData = [
             title: "【4K】Ginza Yukata festival",
             nation:"Japan"
         },
-
+        {
+            lat: 42.462847,
+            lng: -76.4520337,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/laPpth6x3P8",
+            title: "Live Birds In 4K! Cornell Lab FeederWatch Cam at Sapsucker Woods",
+            nation:"USA"
+        },
+        {
+            lat: 24.8851886,
+            lng: 121.2853226,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/z_mlibCfgFI",
+            title: "Daxi Old Street Live Cam ",
+            nation:"Taiwan"
+        },
+        {
+            lat: 37.6186966,
+            lng: -122.4946038,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/8gkxC22E-sY",
+            title: "Mori Point Pacifica, CA Live 4K Multi-camera",
+            nation:"USA"
+        },
+        {
+            lat: 33.5900848,
+            lng: 130.4421086,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/AcBvgPTL9cg",
+            title: "[LIVE] Airport live camera View of Fukuoka Airport",
+            nation:"Japan"
+        },
+        {
+            lat: 33.5897319,
+            lng: 130.4185387,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/-l6-oIeoo1k",
+            title: "【LIVE】 Railway live camera shinkansen",
+            nation:"Japan"
+        },
+        {
+            lat: 35.6676992,
+            lng: 139.7110345,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://www.youtube.com/embed/xnxU1B3yFN0",
+            title: "【LIVE】 ４K　Railway live camera JR Tokyo",
+            nation:"Japan"
+        },
     ];
     var checkNation;
 var nationList = [];
