--- a/map.html
+++ b/map.html
@@ -598,12 +598,12 @@ var markerData = [
             nation:"Japan"
         },
         {
-            lat: 35.6676992,
-            lng: 139.7110345,
+            lat: 37.4735747,127.1009451,
+            lng: 127.1009451,
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
-            url: "https://www.youtube.com/embed/xnxU1B3yFN0",
-            title: "【LIVE】 ４K　Railway live camera JR Tokyo",
-            nation:"Japan"
+            url: "https://www.twitch.tv/minjuni2848",
+            title: "Jagok Dong",
+            nation:"Korea"
         },
     ];
     var checkNation;
