--- a/map.html
+++ b/map.html
@@ -3,6 +3,7 @@
 <html>
 
   <head>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169303598-1"></script>
 <script>
@@ -49,7 +50,7 @@ position : relative;
 float: left; 
 
 }
-@media (max-width: 744px) {
+@media only screen and (max-width: 744px) {
   #wrap {
     width:100%;
     height:100%;
@@ -79,7 +80,7 @@ display : block;
 
 
 }
-@media (min-width: 744px) and (max-width:1128px) {
+@media only screen and (min-width: 744px) and (max-width:1128px) {
   #list {
          height:100%;
          width: 100% !important;
@@ -99,7 +100,7 @@ display : none;
 }
 
 }
-@media (min-width: 1128px) {
+@media only screen and (min-width: 1128px) {
        #list {
          height:100%;
          width: 740px !important;
