--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height"/>
+    <meta name="viewport"  initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169303598-1"></script>
 <script>
@@ -58,7 +58,7 @@ float: left;
     flex-direction: column-reverse;
 }
   #list {
-         height:100%;
+         height:50%;
          width: 100% !important;
          padding: 10px;
          position : relative;
@@ -66,7 +66,7 @@ float: left;
         
        }
        #yt {
-height: 100%;  /* The height is 400 pixels */
+height: 50%;  /* The height is 400 pixels */
 /* width: calc(100% - 800px) !important;  /* The width is the width of the web page */
 margin: 0px;
 padding: 10px;
