--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <meta name="viewport"  initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169303598-1"></script>
 <script>
@@ -50,7 +50,7 @@ position : relative;
 float: left; 
 
 }
-@media (max-width: 768px) {
+@media (max-device-width: 768px) {
   #wrap {
     width:100%;
     height:100%;
@@ -80,7 +80,7 @@ display : block;
 
 
 }
-@media (min-width: 768px) and (max-width:1128px) {
+@media (min-device-width: 768px) and (max-device-width:1128px) {
   #list {
          height:100%;
          width: 100% !important;
@@ -100,7 +100,7 @@ display : none;
 }
 
 }
-@media (min-width: 1128px) {
+@media (min-device-width: 1128px) {
        #list {
          height:100%;
          width: 740px !important;
