--- a/map.html
+++ b/map.html
@@ -50,7 +50,7 @@ position : relative;
 float: left; 
 
 }
-@media (max-device-width: 768px) {
+@media (max-width: 768px) {
   #wrap {
     width:100%;
     height:100%;
@@ -80,7 +80,7 @@ display : block;
 
 
 }
-@media (min-device-width: 768px) and (max-device-width:1128px) {
+@media (min-width: 768px) and (max-width:1128px) {
   #list {
          height:100%;
          width: 100% !important;
@@ -100,7 +100,7 @@ display : none;
 }
 
 }
-@media (min-device-width: 1128px) {
+@media (min-width: 1128px) {
        #list {
          height:100%;
          width: 740px !important;
