--- a/map.html
+++ b/map.html
@@ -616,8 +616,8 @@ var markerData = [
             nation:"Korea"
         },      
         {
-            lat: 37.5759369,
-            lng: 126.9417968,
+            lat: 37.575996,
+            lng: 126.976820,
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
             url: "https://www.youtube.com/embed/AQBNcwAK93I",
             title: "Gwanghwamun, Seoul Here & Now 24h Live Cam",
