--- a/map.html
+++ b/map.html
@@ -60,6 +60,7 @@
     width:100%;
     height:100%;
     display: flex;
+    padding-top: 63px;
 }
 
 
@@ -152,8 +153,9 @@ width: calc(100% - 800px) !important;  /* The width is the width of the web page
 margin: 0px;
 padding: 10px;
 position : fixed;
-float: rifht;
+float: right;
 right:0px; 
+
 
 }
 }
@@ -192,7 +194,16 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
 -->
 <div id="fake-header" style ="height:40px;"></div>
   <div id="header" class="sHeader">
-    <h3 id="title">Sunny5ive realtime camera map</h3>
+    <div class="words words-1">
+      <span>N</span>
+      <span>O</span>
+      <span>W</span>
+      <span>H</span>
+      <span>E</span>
+      <span>R</span>
+      <span>E</span>
+    </div>
+    <!--<h3 id="title">Sunny5ive realtime camera map</h3>-->
     <div id="input-form" style="display:none">
       검색 : <input type="text" id="keyword" />
   </div>
@@ -1136,7 +1147,8 @@ if(data.lat < newNorthEast.lat() ){
 
 const input = document.getElementById("pac-input");
   const searchBox = new google.maps.places.SearchBox(input);
- // map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+  //searchbox지도안으로 넣기
+  map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
   // Bias the SearchBox results towards current map's viewport.
   map.addListener("bounds_changed", () => {
     searchBox.setBounds(map.getBounds());
