--- a/map.html
+++ b/map.html
@@ -243,7 +243,14 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
       <div id ="map"></div>
     </div>
   </div>
-    
+  <iframe
+  src="https://player.twitch.tv/?channel=minjuni2848&parent=localhost&muted=true"
+  height="720"
+  width="1280"
+  frameborder="0"
+  scrolling="no"
+  allowfullscreen="true">
+</iframe>
   
   <!--<a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=http://localhost&scope=user_read">aaaaaaa</a>-->
     <script>
