--- a/map.html
+++ b/map.html
@@ -244,7 +244,7 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
     </div>
   </div>
   <iframe
-  src="https://player.twitch.tv/?channel=minjuni2848&parent=localhost&muted=true"
+  src="https://player.twitch.tv/?channel=minjuni2848&parent=https://sunnyfive.net&muted=true"
   height="720"
   width="1280"
   frameborder="0"
