--- a/map.html
+++ b/map.html
@@ -243,14 +243,14 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
       <div id ="map"></div>
     </div>
   </div>
-  <iframe
+  <!--<iframe
   src="https://player.twitch.tv/?channel=minjuni2848&parent=sunnyfive.net&muted=true"
   height="720"
   width="1280"
   frameborder="0"
   scrolling="no"
   allowfullscreen="true">
-</iframe>
+</iframe>-->
   
   <!--<a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=http://localhost&scope=user_read">aaaaaaa</a>-->
     <script>
@@ -689,6 +689,15 @@ var markerData = [
             icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
             url: "https://www.youtube.com/embed/AQBNcwAK93I",
             title: "Gwanghwamun, Seoul Here & Now 24h Live Cam",
+            nation:"Korea"
+        },
+        ////////////////////twitch area/////////////////////////
+        {
+            lat: 37.473106,
+            lng: 127.100274,
+            icon: "http://labs.google.com/ridefinder/images/mm_20_red.png",
+            url: "https://player.twitch.tv/?channel=minjuni2848&parent=sunnyfive.net&muted=true",
+            title: "Asea ICT Center, SunnyFive",
             nation:"Korea"
         },
 
