--- a/map.html
+++ b/map.html
@@ -252,7 +252,7 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
   allowfullscreen="true">
 </iframe>-->
   
-  <!--<a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=http://localhost&scope=user_read">aaaaaaa</a>-->
+  <<a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=http://localhost&scope=user_read">aaaaaaa</a>
     <script>
       //"file:///Users/hanjeongho/Documents/GitHub/website/map.html"
 /*
