--- a/map.html
+++ b/map.html
@@ -252,7 +252,7 @@ https://www.w3schools.com/graphics/google_maps_reference.asp
   allowfullscreen="true">
 </iframe>-->
   
-  <<a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=http://localhost&scope=user_read">aaaaaaa</a>
+  <a href="https://api.twitch.tv/kraken/oauth2/authorize?response_type=code&client_id=t0m7bcvtee84igtp7lrd080gbno6uf&redirect_uri=https://sunnyfive.net/redirect.html&scope=user_read">aaaaaaa</a>
     <script>
       //"file:///Users/hanjeongho/Documents/GitHub/website/map.html"
 /*
@@ -788,9 +788,17 @@ function initMap() {
     constructor(data) {
       super();
       var myLatLng = new google.maps.LatLng(data.lat, data.lng);
+
+      if(data.url.indexOf("youtube")!=-1){
     var split_url = data.url.split("embed/")
     var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg"
     var localimg = "./img/youtube.png"
+      }
+      else{
+        var split_url = data.url.split("=");
+        split_url = split_url[1].split("&");
+    var imgsrc = "https://static-cdn.jtvnw.net/previews-ttv/live_user_"+ split_url[0]+ "-480x272.jpg"
+      }
       this.position = myLatLng;
       const imgs = document.createElement("img");
       imgs.src = imgsrc;
@@ -912,9 +920,14 @@ function initMap() {
     constructor(data) {
       super();
       var myLatLng = new google.maps.LatLng(data.lat, data.lng);
+      if(data.url.indexOf("youtube")!=-1){
     var split_url = data.url.split("embed/")
     var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/default.jpg"
     var localimg = "./img/youtube48.png"
+      }
+      else{
+        var localimg = "./img/zoom_icon.png"
+      }
       this.position = myLatLng;
       const imgs = document.createElement("img");
       imgs.src = localimg;
@@ -1286,6 +1299,19 @@ var split_url = markerData[id].url.split("embed/")
 
 var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg"
 
+if(markerData[id].url.indexOf("youtube")!=-1){
+    var split_url = markerData[id].url.split("embed/")
+    var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg"
+    var localimg = "./img/youtube.png"
+      }
+      else{
+        var split_url = markerData[id].url.split("=");
+        split_url = split_url[1].split("&");
+    var imgsrc = "https://static-cdn.jtvnw.net/previews-ttv/live_user_"+ split_url[0]+ "-480x272.jpg"
+      }
+
+
+
 var src = '<div class="panel_list" ><img id = "img_panel" src =' + imgsrc + ' class = "thumbnail" onerror="function(){$(this).parent().remove()}"/> <div id = "video_panel" style ="display:none"> <iframe id="yt_panel" width="100%" height="100%" src="'+markerData[id].url+'?enablejsapi=1&version=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div> <p title = "' + markerData[id].title + '">' +markerData[id].title + '</>'
 
 
@@ -1318,6 +1344,18 @@ img.src = "https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg"
 //var imgCheck = ImageExist("https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg")
 
 var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/mqdefault.jpg"
+
+if(markerData[id].url.indexOf("youtube")!=-1){
+    var split_url = markerData[id].url.split("embed/")
+    var imgsrc = "https://img.youtube.com/vi/" + split_url[1] + "/hqdefault.jpg"
+    var localimg = "./img/youtube.png"
+      }
+      else{
+        var split_url = markerData[id].url.split("=");
+        split_url = split_url[1].split("&");
+    var imgsrc = "https://static-cdn.jtvnw.net/previews-ttv/live_user_"+ split_url[0]+ "-480x272.jpg"
+      }
+
 
 var src = '<div class="panel_list" ><img id = "img_panel" src =' + imgsrc + ' class = "thumbnail" onerror="function(){$(this).parent().remove()}"/> <div id = "video_panel" style ="display:none"> <iframe id="yt_panel" width="100%" height="100%" src="'+markerData[id].url+'?enablejsapi=1&version=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div> <p title = "' + markerData[id].title + '">' +markerData[id].title + '</>'
 
